--- a/env.example
+++ b/env.example
@@ -2,6 +2,7 @@
 NODE_ENV=production
 
 # MongoDB
+MONGODB_URI=mongodb://admin:password123@localhost:27017/it_studio?authSource=admin
 MONGO_PASSWORD=password123
 
 # Redis
