--- a/backend/package.json
+++ b/backend/package.json
@@ -17,53 +17,54 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "seed": "ts-node src/database/seed.ts"
+    "seed": "ts-node src/database/seed.ts",
+    "seed:dev": "npm run seed"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.10",
-    "@nestjs/core": "^10.3.10",
-    "@nestjs/platform-express": "^10.3.10",
-    "@nestjs/mongoose": "^10.0.5",
     "@nestjs/config": "^3.2.2",
+    "@nestjs/core": "^10.3.10",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mongoose": "^10.0.5",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/throttler": "^5.1.1",
-    "@nestjs/websockets": "^10.3.10",
+    "@nestjs/platform-express": "^10.3.10",
     "@nestjs/platform-socket.io": "^10.3.10",
     "@nestjs/swagger": "^7.3.1",
-    "@nestjs/platform-express": "^10.3.10",
+    "@nestjs/throttler": "^5.1.1",
+    "@nestjs/websockets": "^10.3.10",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
+    "handlebars": "^4.7.8",
+    "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
+    "minio": "^7.1.3",
     "mongoose": "^8.1.0",
+    "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "bcryptjs": "^2.4.3",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
-    "ioredis": "^5.3.2",
-    "minio": "^7.1.3",
-    "nodemailer": "^6.9.9",
-    "handlebars": "^4.7.8",
-    "socket.io": "^4.6.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.6.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.10",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
-    "@types/node": "^20.11.16",
-    "@types/supertest": "^6.0.2",
-    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^20.19.25",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "dotenv": "^17.2.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -75,7 +76,7 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.9.3"
   },
   "jest": {
     "moduleFileExtensions": [
