--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "lucide-react": "^0.555.0",
     "next": "^14.1.0",
     "postcss": "^8.5.6",
     "react": "^18.2.0",
